<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="30sp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:layout_marginTop="20sp">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:textAlignment="center"
            android:id="@+id/txtEmpleado"
            android:hint="Escribe tu nombre">

        </EditText>

        <ImageView
            android:layout_width="245dp"
            android:layout_height="328dp"
            android:layout_gravity="center"
            android:padding="4dp"
            android:src="@drawable/empresa">

        </ImageView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnEntrar"
            android:id="@+id/btnEntrar">

        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSalir"
            android:id="@+id/btnSalir">

        </Button>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>